# EDGELESS-PROJECT

./: .gitignore  Cargo.toml  LICENSE  README.md  analyze-res.py  analyze_latency.py  functions-latency.py  generate-workflow.py  plot-res.py  replication.py  replication.sh  replication2.sh  summary.csv  summary_with_ci.csv  transfer-execution.py  transfer-ratio.py  workflow.json
dataset/: capabilities.csv
examples/: workflow-lambda.json  workflow-mem.json  workflow.json  workflow1.json  workflow_send_to_all.json  workflow_send_to_any.json
functions/lambda/: Cargo.toml  function.json
functions/lambda/src/: lib.rs
res/: f10_p0.5_r0.csv  f10_p0.5_r1.csv  f10_p0.5_r2.csv  f10_p0.5_r3.csv  f10_p0.5_r4.csv  f10_p0.5_r5.csv  f10_p0.5_r6.csv  f10_p0.5_r7.csv  f10_p0.5_r8.csv  f10_p0.5_r9.csv  f10_p0_r0.csv  f10_p0_r1.csv  f10_p0_r2.csv  f10_p0_r3.csv  f10_p0_r4.csv  f10_p0_r5.csv  f10_p0_r6.csv  f10_p0_r7.csv  f10_p0_r8.csv  f10_p0_r9.csv  f10_p1_r0.csv  f10_p1_r1.csv  f10_p1_r2.csv  f10_p1_r3.csv  f10_p1_r4.csv  f10_p1_r5.csv  f10_p1_r6.csv  f10_p1_r7.csv  f10_p1_r8.csv  f10_p1_r9.csv  f20_p0.5_r0.csv  f20_p0.5_r1.csv  f20_p0.5_r2.csv  f20_p0.5_r3.csv  f20_p0.5_r4.csv  f20_p0.5_r5.csv  f20_p0.5_r6.csv  f20_p0.5_r7.csv  f20_p0.5_r8.csv  f20_p0.5_r9.csv  (+110 more)
results/: f10_p0.5_r0.csv  f10_p0.5_r1.csv  f10_p0.5_r2.csv  f10_p0.5_r3.csv  f10_p0.5_r4.csv  f10_p0.5_r5.csv  f10_p0.5_r6.csv  f10_p0.5_r7.csv  f10_p0.5_r8.csv  f10_p0.5_r9.csv  f10_p0_r0.csv  f10_p0_r1.csv  f10_p0_r2.csv  f10_p0_r3.csv  f10_p0_r4.csv  f10_p0_r5.csv  f10_p0_r6.csv  f10_p0_r7.csv  f10_p0_r8.csv  (+131 more)
(+21 files in other folders)
